--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -10,48 +10,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Cloning repository together with submodules
+      # 1. Clone repository with submodules
       - name: Checkout repository with submodules
         uses: actions/checkout@v4
         with:
           submodules: true
 
-      # 2. Setup Docker Buildx
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      # 3. Login to GitHub Container Registry
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      # 4. Build and push of backend
-      - name: Build & push backend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./conduit-backend
-          file: ./conduit-backend/Dockerfile
-          push: true
-          tags: ghcr.io/bodev13/conduit-backend:latest
-          build-args: |
-            ENV_FILE=.env
-
-      # 5. Build and push of frontend
-      - name: Build & push frontend image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./conduit-frontend
-          file: ./conduit-frontend/Dockerfile
-          push: true
-          tags: ghcr.io/bodev13/conduit-frontend:latest
-          build-args: |
-            ENV_FILE=.env
-
-      # 6. Deploy to Cloud VM
-      - name: Deploy to server
+      # 2. Deploy & build directly on Cloud VM
+      - name: Deploy to Cloud VM
         uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.SERVER_IP }}
@@ -59,6 +25,9 @@ jobs:
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             set -e
+            # Going to the project directory on cloud VM
             cd /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app
+            git pull
+            git submodule update --init --recursive
             docker-compose down
-            docker-compose up -d
+            docker-compose up -d --build
