--- a/.github/workflows/deployment-gh-build.yaml
+++ b/.github/workflows/deployment-gh-build.yaml
@@ -24,7 +24,15 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # 3. Build backend & frontend images and push to registry
+      # 3. Login to GitHub Container Registry
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      # 4. Build backend & frontend images and push to registry
       - name: Build & push backend image
         uses: docker/build-push-action@v5
         with:
@@ -45,7 +53,7 @@ jobs:
           build-args: |
             ENV_FILE=.env
 
-      # 4. Deploy to Cloud VM (only pull + up -d)
+      # 5. Deploy to Cloud VM (only pull + up -d)
       - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.6
         with:
