--- a/.github/workflows/deployment-gh-build.yaml
+++ b/.github/workflows/deployment-gh-build.yaml
@@ -65,5 +65,5 @@ jobs:
             cd /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app
             git pull origin cicd-actions-build
             git submodule update --init --recursive
-            docker-compose pull
-            docker-compose up -d
+            docker compose pull
+            docker compose up -d
