update depl.workflo and docker-compose for ghcr images and .env secrets

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,4 +1,4 @@
-name: Conduit Deployment via GH Actions Build
+name: Conduit Deployment
 
 permissions:
   contents: read
@@ -7,6 +7,7 @@ permissions:
 on:
   push:
     branches:
+      - main
       - cicd-actions-build
 
 jobs:
@@ -14,13 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Clone repository with submodules
-      - name: Checkout repository with submodules
-        uses: actions/checkout@v4
-        with:
-          submodules: true
+      # 1. Checkout repository
+      - name: Checkout repository
+        uses: actions/checkout@v6
 
-      # 2. Setup Docker Buildx (build locally in Actions)
+      # 2. Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -32,28 +31,58 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 4. Build backend & frontend images and push to registry
+      # 4. Build & push backend image with multiple tags
       - name: Build & push backend image
         uses: docker/build-push-action@v5
         with:
           context: ./conduit-backend
           file: ./conduit-backend/Dockerfile
           push: true
-          tags: ghcr.io/bodev13/conduit-backend:latest
+          tags: |
+            ghcr.io/bodev13/conduit-backend:latest
+            ghcr.io/bodev13/conduit-backend:${{ github.sha }}
           build-args: |
             ENV_FILE=.env
 
+      # 5. Build & push frontend image with multiple tags
       - name: Build & push frontend image
         uses: docker/build-push-action@v5
         with:
           context: ./conduit-frontend
           file: ./conduit-frontend/Dockerfile
           push: true
-          tags: ghcr.io/bodev13/conduit-frontend:latest
+          tags: |
+            ghcr.io/bodev13/conduit-frontend:latest
+            ghcr.io/bodev13/conduit-frontend:${{ github.sha }}
           build-args: |
             ENV_FILE=.env
 
-      # 5. Deploy to Cloud VM (only pull + up -d)
+      # 6. Create .env on server from GitHub Secrets
+      - name: Create .env on server
+        uses: appleboy/ssh-action@v0.1.6
+        with:
+          host: ${{ secrets.SERVER_IP }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          script: |
+            set -e
+            cd /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app
+            echo "API_URL=${{ secrets.API_URL }}" > .env
+            echo "ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}" >> .env
+            echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
+            echo "DEBUG=${{ secrets.DEBUG }}" >> .env
+            echo "DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}" >> .env
+            echo "DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}" >> .env
+            echo "DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}" >> .env
+            echo "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" >> .env
+            echo "FRONTEND_PORT=${{ secrets.FRONTEND_PORT }}" >> .env
+            echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
+            echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
+            echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
+            echo "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" >> .env
+            echo "POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}" >> .env
+            chmod 600 .env
+
       - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.6
         with:
@@ -63,7 +92,5 @@ jobs:
           script: |
             set -e
             cd /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app
-            git pull origin cicd-actions-build
-            git submodule update --init --recursive
             docker compose pull
             docker compose up -d
