--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -35,8 +35,8 @@ jobs:
       - name: Build & push backend image
         uses: docker/build-push-action@v5
         with:
-          context: ./conduit-fullstack-app/conduit-backend
-          file: Dockerfile
+          context: ./conduit-backend
+          file: ./conduit-backend/Dockerfile
           push: true
           tags: |
             ghcr.io/bodev13/conduit-backend:latest
@@ -48,8 +48,8 @@ jobs:
       - name: Build & push frontend image
         uses: docker/build-push-action@v5
         with:
-          context: ./conduit-fullstack-app/conduit-frontend
-          file: Dockerfile
+          context: ./conduit-frontend
+          file: ./conduit-frontend/Dockerfile
           push: true
           tags: |
             ghcr.io/bodev13/conduit-frontend:latest
