--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -37,7 +37,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: conduit-backend/Dockerfile
+          file: ./conduit-backend/Dockerfile
           push: true
           tags: |
             ghcr.io/bodev13/conduit-backend:latest
@@ -52,7 +52,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: conduit-frontend/Dockerfile
+          file: ./conduit-frontend/Dockerfile
           push: true
           tags: |
             ghcr.io/bodev13/conduit-frontend:latest
