--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,4 +1,4 @@
-name: Conduit Deployment
+name: Conduit Deployment via GH Actions Build
 
 permissions:
   contents: read
@@ -7,57 +7,53 @@ permissions:
 on:
   push:
     branches:
-      - main
       - cicd-actions-build
-  workflow_dispatch:
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v6
-
-      - name: Create .env locally
-        run: |
-          echo "DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}" > .env
-          echo "DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}" >> .env
-          echo "DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}" >> .env
-          echo "ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}" >> .env
-          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
-          echo "DEBUG=${{ secrets.DEBUG }}" >> .env
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-          echo "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" >> .env
-          echo "POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}" >> .env
-
-          echo "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" > .env
-          echo "FRONTEND_PORT=${{ secrets.FRONTEND_PORT }}" >> .env
-          echo "API_URL=${{ secrets.API_URL }}" >> .env
-
-      - name: Create server directories
-        uses: appleboy/ssh-action@v0.1.6
+      # 1. Clone repository with submodules
+      - name: Checkout repository with submodules
+        uses: actions/checkout@v4
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          script: |
-            mkdir -p /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app/backend
-            mkdir -p /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app/frontend
+          submodules: true
 
-      - name: Upload config to server
-        uses: appleboy/scp-action@v0.1.0
+      # 2. Setup Docker Buildx (build locally in Actions)
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      # 3. Login to GitHub Container Registry
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
-          host: ${{ secrets.SERVER_IP }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          source: |
-            docker-compose.yaml
-            .env
-          target: /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
+      # 4. Build backend & frontend images and push to registry
+      - name: Build & push backend image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./conduit-backend
+          file: ./conduit-backend/Dockerfile
+          push: true
+          tags: ghcr.io/bodev13/conduit-backend:latest
+          build-args: |
+            ENV_FILE=.env
+
+      - name: Build & push frontend image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./conduit-frontend
+          file: ./conduit-frontend/Dockerfile
+          push: true
+          tags: ghcr.io/bodev13/conduit-frontend:latest
+          build-args: |
+            ENV_FILE=.env
+
+      # 5. Deploy to Cloud VM (only pull + up -d)
       - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.6
         with:
@@ -65,7 +61,9 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            set -e
             cd /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app
-            docker login ghcr.io -u ${{ github.repository_owner }} --password-stdin <<< ${{ secrets.GITHUB_TOKEN }}
+            git pull origin cicd-actions-build
+            git submodule update --init --recursive
             docker compose pull
-            docker compose --env-file backend.env up -d --remove-orphans
+            docker compose up -d
