--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,4 +1,4 @@
-name: Conduit Deployment via GH Actions Build
+name: Conduit Deployment
 
 permissions:
   contents: read
@@ -21,7 +21,7 @@ jobs:
         with:
           submodules: true
 
-      # 2. Setup Docker Buildx (build locally in Actions)
+      # 2. Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -33,30 +33,33 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 4. Build backend & frontend images and push to registry
+      # 4. Build & push backend image
       - name: Build & push backend image
         uses: docker/build-push-action@v5
         with:
           context: ./conduit-backend
           file: ./conduit-backend/Dockerfile
           push: true
-          tags: ghcr.io/bodev13/conduit-backend:latest
-            ghcr.io/bodev13/conduit-backend:${{ github.sha }}
+          tags:
+            - ghcr.io/bodev13/conduit-backend:latest
+            - ghcr.io/bodev13/conduit-backend:${{ github.sha }}
           build-args: |
             ENV_FILE=.env
 
+      # 5. Build & push frontend image
       - name: Build & push frontend image
         uses: docker/build-push-action@v5
         with:
           context: ./conduit-frontend
           file: ./conduit-frontend/Dockerfile
           push: true
-          tags: ghcr.io/bodev13/conduit-frontend:latest
-            ghcr.io/bodev13/conduit-frontend:${{ github.sha }}
+          tags:
+            - ghcr.io/bodev13/conduit-frontend:latest
+            - ghcr.io/bodev13/conduit-frontend:${{ github.sha }}
           build-args: |
             ENV_FILE=.env
 
-      # 5. Deploy to Cloud VM (only pull + up -d)
+      # 6. Deploy to Cloud VM (only pull + up -d)
       - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.6
         with:
