added | to BE & FE tags

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -40,7 +40,8 @@ jobs:
           context: ./conduit-backend
           file: ./conduit-backend/Dockerfile
           push: true
-          tags: ghcr.io/bodev13/conduit-backend:latest
+          tags: |
+            ghcr.io/bodev13/conduit-backend:latest
             ghcr.io/bodev13/conduit-backend:${{ github.sha }}
           build-args: |
             ENV_FILE=.env
@@ -52,7 +53,8 @@ jobs:
           context: ./conduit-frontend
           file: ./conduit-frontend/Dockerfile
           push: true
-          tags: ghcr.io/bodev13/conduit-frontend:latest
+          tags: |
+            ghcr.io/bodev13/conduit-frontend:latest
             ghcr.io/bodev13/conduit-frontend:${{ github.sha }}
           build-args: |
             ENV_FILE=.env
