--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -59,25 +59,27 @@ jobs:
           build-args: |
             ENV_FILE=.env
 
-      # 6. Preparation of .env variables for server
-      - name: Prepare .env for server
+      # 6. Preparation of .env file
+      - name: Prepare env file
         run: |
-          echo "DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}" > .env
-          echo "DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}" >> .env
-          echo "DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}" >> .env
-          echo "ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}" >> .env
-          echo "SECRET_KEY=${{ secrets.SECRET_KEY }}" >> .env
-          echo "DEBUG=${{ secrets.DEBUG }}" >> .env
-          echo "POSTGRES_DB=${{ secrets.POSTGRES_DB }}" >> .env
-          echo "POSTGRES_USER=${{ secrets.POSTGRES_USER }}" >> .env
-          echo "POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}" >> .env
-          echo "POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}" >> .env
-          echo "POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}" >> .env
-          echo "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" >> .env
-          echo "FRONTEND_PORT=${{ secrets.FRONTEND_PORT }}" >> .env
-          echo "API_URL=${{ secrets.API_URL }}" >> .env
+          cat <<EOF > env.prod
+          DJANGO_SUPERUSER_PASSWORD=${{ secrets.DJANGO_SUPERUSER_PASSWORD }}
+          DJANGO_SUPERUSER_EMAIL=${{ secrets.DJANGO_SUPERUSER_EMAIL }}
+          DJANGO_SUPERUSER_USERNAME=${{ secrets.DJANGO_SUPERUSER_USERNAME }}
+          ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }}
+          SECRET_KEY=${{ secrets.SECRET_KEY }}
+          DEBUG=${{ secrets.DEBUG }}
+          POSTGRES_DB=${{ secrets.POSTGRES_DB }}
+          POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_HOST=${{ secrets.POSTGRES_HOST }}
+          POSTGRES_PORT=${{ secrets.POSTGRES_PORT }}
+          FRONTEND_URL=${{ secrets.FRONTEND_URL }}
+          FRONTEND_PORT=${{ secrets.FRONTEND_PORT }}
+          API_URL=${{ secrets.API_URL }}
+          EOF
 
-      # 7. Upload docker-compose.yaml and .env to server
+      # 7. Upload docker-compose.yml and .env to server
       - name: Upload deployment files
         uses: appleboy/scp-action@v0.1.0
         with:
@@ -85,8 +87,8 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: |
-            docker-compose.yaml
-            .env
+            docker-compose.yml
+            env.prod
           target: /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app
 
       # 8. Deploy to Cloud VM (only pull + up -d)
@@ -97,9 +99,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            set -e
             cd /home/${{ secrets.SERVER_USER }}/conduit-fullstack-app
-            git pull origin cicd-actions-build
-            git submodule update --init --recursive
+            mv env.prod .env
             docker compose pull
             docker compose up -d
